fix to overflow-x

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
 body {
   font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
-
+ overflow-x: hidden;
 }
 
 .container {
